Added new files. .gitignore is configured

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
     <script src="./JQuery/jquery-3.7.0.min.js"></script>
     <script src="./JQuery/smoothState.js-master/smoothState.js-master/src/jquery.smoothState.js"></script>
-    <script src="transition.js"></script>
+    <script src="./node_modules/animejs/lib/anime.min.js"></script>
     <title>Bibliotheca: Library of legends</title>
 </head>
 <body>
